# Scan Comments Edge Function - Recent Changes

## Latest Updates

### Enhanced Token Counting and Batch Sizing
- **Precise Token Counting**: Implemented more accurate token estimation based on model characteristics
- **Dynamic Batch Sizing**: Optimized batch sizes using I/O ratios and actual token limits
- **Safety Margins**: Added configurable safety margins to prevent hitting token limits
- **Performance Monitoring**: Added detailed timing and performance metrics

### Improved Adjudication System
- **Backend-Only Adjudication**: Removed client-side adjudicator calls; backend triggers adjudication and returns results
- **Batch Processing**: Adjudication processes comments in batches for efficiency
- **Duplicate Prevention**: Enhanced duplicate detection across function instances and DB log checks
- **Free Adjudication**: Adjudication remains free (no credit consumption)
- **Better Error Handling**: Improved error recovery and fallback mechanisms

### Enhanced AI Provider Support
- **AWS Bedrock Integration**: Full support for Claude, Llama, and Titan models
- **AWS Signature V4**: Proper authentication for Bedrock API calls
- **Model-Specific Token Counting**: Different token estimation for each model type
- **Temperature Configuration**: Support for configurable temperature per model

### Rate Limiting Improvements
- **TPM/RPM Tracking**: Comprehensive rate limit monitoring
- **Automatic Waiting**: Smart waiting when approaching rate limits
- **Cross-Instance Coordination**: Rate limiting works across multiple function instances
- **Configurable Limits**: Support for different limits per model

### Logging and Monitoring Enhancements
- **AI Request/Response Logging**: Complete logging of all AI interactions
- **Token Usage Tracking**: Detailed token consumption monitoring
- **Performance Metrics**: Timing and efficiency measurements
- **Error Correlation**: Better error tracking with scan run IDs

### Bug Fixes